# futura-sbmptn-forecasting

./: Humanities.ipynb  LICENSE  README.md  Science-rapi-2 (3) (1).ipynb  Science-rapi-2 (3).ipynb  app.yaml  config.py  database.py  db.py  main.py  pyproject.toml  requirements.txt  structure
routes/: api.py
src/endpoints/: product.py  user.py
src/models/: auth.py  product.py  user.py
