[tool.poetry]
name = "futura-sbmptn-forecasting"
version = "0.1.0"
description = ""
authors = ["AndrosaKrist <androsa029@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aioredis = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
